--- a/index.html
+++ b/index.html
@@ -1,13 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>First trial</title>
+    <title>My Bookmarks-coding 4</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    started at a slow pace
+    <h1>Amazing</h1>
+    <h2>Super- sai ganesh </h2>
+    <h3>Super- sai ganesh </h3>
+    <h4>Super- Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex non autem maxime accusantium? Iste, cumque
+        ipsum reiciendis ea expedita inventore sit consectetur fuga iusto! Ducimus error earum tempore unde aspernatur?
+    </h4>
     <script src="script.js"></script>
+    <p></p>
+    <p><a target="_blank" href="https://www.google.com">open google</a></p>
+    <p><a target="_blank" href="https://www.google.com">open google</a></p>
+    <p><a target="_blank" href="https://www.google.com">open google</a></p>
+    <img height="230" src="image.png" alt="tiger image">
+    <table>
+        <caption>its a table of books</caption>
+        <thead>
+            <tr>
+                <th>Bookneeded</th>
+                <th>book ordered</th>
+                <th>Book reservd</th>
+            </tr>
+        </thead>
+        <tfoot>
+            <tr>
+                <td>amazon</td>
+                <td colspan="2">riscv</td>
+                <td rowspan="2">got</td>
+            </tr>
+        </tfoot>
+
+    </table>
+
+    <ul type="square">
+        <li>harry</li>
+        <li>with</li>
+        <li>code</li>
+    </ul>
+    <ol>
+        <li>harry</li>
+        <li>with</li>
+        <li>code</li>
+    </ol>
+
+
+
 </body>
+
 </html>
